[package]
name = "libconsensus-lachesis-rs"
version = "0.0.1"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
bincode = "1.0.1"
failure = "0.1.5"
log = "0.4"
proptest = "0.8.7"
rand = "0.6.0"
ring = "0.13.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "*"
untrusted = "0.6.2"
libtransport-http = { path = "../libtransport-http" }

